@@ -1,0 +1,12 @@
+<header>Can create and edit plans?</header>
+
+This field determines if the reseller is allowed to create his own plans
+or edit those that he has already created. If not, only plans created by
+root can be used. <p>
+
+Even if a reseller can create plans, the total disk space and other resources
+given to virtual servers cannot exceed his limits defined by the master
+administrator. <p>
+
+<footer>
+
